# lidget-api

./: .env.exemple  .gitignore  Cargo.toml
migrations/: 0001_create_users.sql  0002_create_sessions.sql  0003_create_invite_code.sql  0004_create_relationships.sql  0005_create_photos.sql  0006_create_quizzes.sql  0007_create_events.sql  0008_create_notifications_queue.sql
src/: config.rs  db.rs  errors.rs  jwt.rs  main.rs  pagination.rs  routes.rs  state.rs  upload.rs
src/events/: mod.rs
src/handlers/: auth.rs  mod.rs  quizzes.rs
src/middleware/: auth.rs
src/models/: invite_code.rs  mod.rs  notification.rs  quiz.rs  relationship.rs  session.rs  sessions.rs  user.rs
src/ws/: handler.rs  mod.rs  registry.rs  types.rs
