[package]
name = "lidget"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["ws", "multipart", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
dotenv = "0.15"
tower-http = { version = "0.5", features = ["cors", "fs"] }
bcrypt = "0.15"
sha2 = "0.10"
async-trait = "0.1"
# Il faut aussi installer sqlx-cli pour run les migrations avant de build